<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SyncPad</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_docs_list">Documents</string>
    <string name="title">Lets get going!</string>
    <string name="login">Login</string>
    <string name="signup">Ping</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="authentication_failure">wrong username or password</string>
    <string name="title_activity_doc_viewer">DocViewer</string>
    <string name="title_activity_doc_editor">DocEditorActivity</string>
    <string name="title_activity_share_list">Share</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_user_manager">UserManagerActivity</string>
    <string name="title_activity_foll">FollActivity</string>
    <string name="title_activity_sign_up">SignUp</string>

</resources>
